--- a/shopping_cart/app/src/main/res/layout/activity_product_details.xml
+++ b/shopping_cart/app/src/main/res/layout/activity_product_details.xml
@@ -18,8 +18,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="147dp"
+        android:layout_height="137dp"
         android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,4 +39,17 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/btnAddToCart"
+        android:layout_width="123dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="256dp"
+        android:onClick="AddCart"
+        android:text="add to cart"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
