--- a/shopping_cart/app/src/main/res/layout/product_list_item.xml
+++ b/shopping_cart/app/src/main/res/layout/product_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView"
@@ -14,21 +14,32 @@
 
     <TextView
         android:id="@+id/txtName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="212dp"
+        android:layout_width="126dp"
+        android:layout_height="18dp"
+        android:layout_marginEnd="124dp"
         android:text="@string/textview"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintVertical_bias="0.239" />
+
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="192dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
     <TextView
         android:id="@+id/txtIsAvailable"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="212dp"
+        android:layout_width="125dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="124dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="111dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />
 </androidx.constraintlayout.widget.ConstraintLayout>
